src/objects/Apttus_Config2__GuidedSearchRuleFilter__c.object
<CustomObject>
    <description>Represents a single search filter in a guided search rule entry</description>
    <fields>
        <fullName>Apttus_Config2__CompOper__c</fullName>
        <description>The field comparison operator</description>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equal to</fullName>
                </value>
                <value>
                    <fullName>not equal to</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>does not contain</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>less than or equal to</fullName>
                </value>
                <value>
                    <fullName>greater than or equal to</fullName>
                </value>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FieldName__c</fullName>
        <description>The search field</description>
        <label>Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FieldValue__c</fullName>
        <description>the field comparison value</description>
        <label>Question / Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MapTo__c</fullName>
        <description>The type of field comparison value, maps to a Question or a Constant value</description>
        <label>Map To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Question</fullName>
                </value>
                <value>
                    <fullName>Value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RuleEntryId__c</fullName>
        <description>ID of the associated rule entry</description>
        <label>Rule Entry</label>
        <referenceTo>Apttus_Config2__GuidedSearchRuleEntry__c</referenceTo>
        <relationshipName>GuidedSearchFilters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>The filter sequence</description>
        <label>Filter Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Guided Search Rule Filter</label>
    <nameField>
        <displayFormat>FI-{0000000000}</displayFormat>
        <label>Filter Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Guided Search Rule Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>